finalized the card by adding show function and update matching counting table

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div class="container-1">
-      <h3>
+      <h3 id = 'blackjack-result'>
            Let's play
         </h3>
             <div class="flex-box-blackjack-row-1">
@@ -44,9 +44,9 @@
                   <th>Draw</th>
             </tr>
             <tr>
-                <td>0</td>  
-                <td>0</td>
-                <td>0</td>
+                <td id='player-win'>0</td>  
+                <td  id='player-loss'>0</td>
+                <td  id='player-draw'>0</td>
             </tr>
           </table>
       </div>
